tests/NormalTests/paczka1/fuzzy1/98802411.err
Error in line 1: dPnQA A280 56,7
Error in line 3: dPnQA S955 45,8
Error in line 12: SNQwlty A93 15,7
Error in line 24: A280 A280 99,1
Error in line 26: A280 S955 66,6
Error in line 31: dPnQA S785 74,6
